--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include README.rst
 include *.yml
 include *.md
+include *.py
 include .flake8
 recursive-include docs *.bat
 recursive-include docs *.png
